fix-gap-desctop-version

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -5,7 +5,6 @@
 }
 
 .footer-content {
-  gap: 32px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,7 +29,8 @@
 }
 
 .footer-nav {
-  padding-top:32px;
+  margin-top:32px;
+  margin-bottom: 32px;
 }
 
 .footer-nav-list {
@@ -83,8 +83,6 @@
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
   border: none;
   border-radius: 8px;
-  font-weight: 400;
-  font-size: 16px;
   line-height: 150%;
   background-color: #d68953;
   outline: none;
@@ -122,7 +120,6 @@
 /* копірайт */
 
 .footer-copyright {
-  width: 100%;
   max-width: 343px;
   margin-top: 80px;
   border-top: 1px solid #fceee673;
@@ -144,7 +141,7 @@
   .footer {
     box-shadow: inset 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   }
-
+ 
   .footer-logo {
     justify-content: center;
   }
